--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,5 +12,26 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+        <item name="floatingActionButtonStyle">@style/FloatingActionButtonStyle</item>
     </style>
+
+
+    <style name="FloatingActionButtonStyle" parent="Widget.Design.FloatingActionButton">
+
+        <item name="shapeAppearanceOverlay">@style/FABStyle</item>
+
+    </style>
+
+
+    <style name="FABStyle" parent="ShapeAppearance.MaterialComponents.SmallComponent">
+
+        <item name="cornerSize">50%</item>
+        <item name="cornerFamilyTopLeft">rounded</item>
+        <item name="cornerFamilyTopRight">rounded</item>
+        <item name="cornerFamilyBottomLeft">rounded</item>
+        <item name="cornerFamilyBottomRight">rounded</item>
+
+    </style>
+
 </resources>
