--- a/app/src/main/res/layout/recycler_row.xml
+++ b/app/src/main/res/layout/recycler_row.xml
@@ -4,6 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        
+        <variable
+            name="taskEntry"
+            type="com.berkan_uygunucarlar.todolist.database.TaskEntry" />
+        
+        
+        <variable
+            name="clickListener"
+            type="com.berkan_uygunucarlar.todolist.ui.task.TaskClickListener" />
 
     </data>
 
@@ -12,7 +21,9 @@
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         app:cardElevation="4dp"
-        app:cardCornerRadius="8dp">
+        app:cardCornerRadius="8dp"
+
+        android:onClick="@{() -> clickListener.onClick(taskEntry)}">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/rowBackground"
@@ -30,7 +41,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="Title" />
+                tools:text="Title"
+                android:text="@{taskEntry.title}"/>
 
             <TextView
                 android:id="@+id/taskPriority"
@@ -43,7 +55,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/taskTitle"
-                tools:text="High" />
+                tools:text="High"
+                app:setPriority="@{taskEntry.priority}"/>
 
             <TextView
                 android:id="@+id/taskTimestamp"
@@ -58,7 +71,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/taskPriority"
                 app:layout_constraintVertical_bias="0.0"
-                tools:text="Timestamp" />
+                tools:text="Timestamp"
+                app:setTimestamp="@{taskEntry.timestamp}"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </layout>
